--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ fastapi = {extras = ["all"], version = "^0.104.0"}
 sqlalchemy = "^2.0.22"
 alembic = "^1.12.0"
 psycopg2 = "^2.9.9"
+asyncpg = "^0.28.0"
+fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
 
 
 [build-system]
