--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
+[tool.pytest.ini_options]
+pythonpath = [
+  ".", "src",
+]
+asyncio_mode="auto"
+
 [tool.poetry]
 name = "fastapi-test"
 version = "0.1.0"
@@ -12,6 +18,8 @@ sqlalchemy = "^2.0.22"
 alembic = "^1.12.0"
 asyncpg = "^0.28.0"
 fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
+pytest = "^7.4.3"
+pytest-asyncio = "^0.21.1"
 
 
 [build-system]
