--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ asyncpg = "^0.28.0"
 fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
 pytest = "^7.4.3"
 pytest-asyncio = "^0.21.1"
+faker = "^19.13.0"
 
 
 [build-system]
