--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
 pytest = "^7.4.3"
 pytest-asyncio = "^0.21.1"
 faker = "^19.13.0"
+locust = "^2.18.1"
+influxdb-client = {extras = ["async"], version = "^1.38.0"}
 
 
 [build-system]
