--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest-asyncio = "^0.21.1"
 faker = "^19.13.0"
 locust = "^2.18.1"
 influxdb-client = {extras = ["async"], version = "^1.38.0"}
+pydantic = "^2.4.2"
 
 
 [build-system]
