--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,3 @@
-[tool.pytest.ini_options]
-pythonpath = [
-  ".", "src",
-]
-asyncio_mode="auto"
-
 [tool.poetry]
 name = "fastapi-test"
 version = "0.1.0"
@@ -25,6 +19,7 @@ locust = "^2.18.1"
 influxdb-client = {extras = ["async"], version = "^1.38.0"}
 pydantic = "^2.4.2"
 gunicorn = "^21.2.0"
+uvicorn = "^0.24.0.post1"
 
 
 [build-system]
