--- a/.kube/deployment.yaml
+++ b/.kube/deployment.yaml
@@ -16,8 +16,19 @@ spec:
       - name: fastapi-storage
         image: docker.io/artempyzhov/fastapi_storage:1.0.8
         ports:
-            - name: web
-              containerPort: 8000
+           - containerPort: 8000
         env:
           - name: DATABASE_URL
             value: postgresql://postgres:1231@postgres-svc:5432/postgres
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: fastapi-svc
+spec:
+  selector:
+    app: fastapi-storage
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8000
